# Testing_system

./: .gitignore  CMakeLists.txt  config.h  main.cpp
FileWriteReadTest/: FileWriteReadTest.cpp  FileWriteReadTest.h
FileWriteReadUsers/: FileWriteReadUsers.cpp  FileWriteReadUsers.h
Menu/: Menu.cpp  Menu.h
Menu/AdminMenu/: AdminMenu.cpp  AdminMenu.h
Menu/TesterMenu/: TesterMenu.cpp  TesterMenu.h
SaveResult/: SaveResult.cpp  SaveResult.h
SaveResult/Result/: Result.cpp  Result.h
Test/: Test.cpp  Test.h
Test/Question/: Question.cpp  Question.h
TestManager/: TestManager.cpp  TestManager.h
Users/: User.cpp  User.h
Users/Admin/: Admin.cpp  Admin.h
Users/Tester/: Tester.cpp  Tester.h
common/: config.cpp  config.h
common/Common/: Common.cpp  Common.h
data/: results.txt
data/dataTest/География/Страны/: ghj.txt
data/dataTest/Математика/Алгебра/: newTest.txt  Основы_алгебры.txt
